--- a/Formulário.css
+++ b/Formulário.css
@@ -1,6 +1,44 @@
 body{
-    background-color: khaki;
+    background-image: linear-gradient(to bottom,rgb(226, 198, 105) 30%,rgb(172, 125, 86)) ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 label{
     font-weight: bold;
+    font-family:Arial, Helvetica, sans-serif;
+}
+#titulo{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+h1{
+    font-size: 300%;
+}
+main{
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    background-color: white;
+    border-radius: 5%;
+
+}
+form{
+    padding: 4%;
+}
+input, select, textarea, button{
+    border-radius: 15px;
+    border: solid peru;
+}
+fieldset{
+    border-radius: 15px;
+    border: solid 1%;
+}
+#botao{
+    background-color: khaki;
+    display: flex;
+}
+#fim{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
